[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/bullet.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )
radius = 0.5
height = 1.0

[sub_resource type="SphereShape" id=3]
radius = 0.5

[node name="bullet" type="Area"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
